handles dashboard not showing